# BlueQueue

./: README.md  platformio.ini
gui/: main.py  pyproject.toml
lib/Queue/: Queue.c  Queue.h
lib/SerialHandler/: SerialHandler.c  SerialHandler.h
src/: main.c  queue.c  queue.h
